bugfix: <title> tag now has correct value - all pages

--- a/twig/video.html
+++ b/twig/video.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block title %} Home {% endblock %}
+{% block title %} Video {% endblock %}
 {% block content %}
 
 <!-- Main jumbotron -->
