--- a/twig/_base.html
+++ b/twig/_base.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        {% include "_head.html" %}
-        {% block head %} {% endblock %}
-
-        <title> MeToobe - {% block title %} Page {% endblock %}</title>
-    </head>
+    
+    {% block head %} 
+        {% include "_head.html" with { title: block('title') } %}
+    {% endblock %}
 
 
 <body> <!-- style="font-family: sans-serif; "> -->
