changed new link

--- a/twig/home.html
+++ b/twig/home.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h1>Holy fucking shit you need to register mate!</h1>
         <p>Smash this button and get to it.</p>
-        <p><a class="btn btn-success btn-lg" href="/view/login" role="button">Register »</a></p>
+        <p><a class="btn btn-success btn-lg" href="/login" role="button">Register »</a></p>
     </div>
 </div>
 
