updated dummy links to new /video / links - instead of old /view/home /view/video

--- a/twig/video.html
+++ b/twig/video.html
@@ -45,15 +45,15 @@
             <div class="row my-md-1">
                 <div class="col-md-12">
                     <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
-                    <a href="/view/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                    <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
                 </div>
                 <div class="col-md-12">
                     <h2 class="lead text-limit">Video 2</h2>
-                    <a href="/view/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                    <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
                 </div>
                 <div class="col-md-12">
                     <h2 class="lead text-limit">Video 3</h2>
-                    <a href="/view/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                    <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
                 </div>
             </div>
         </div>
