--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse navbar-static-top">
-    <a class="navbar-brand text-success content-header-logo" href="/view/home">#MeToobe</a>
+    <a class="navbar-brand text-success content-header-logo" href="/">#MeToobe</a>
 
     <form class="mx-2 my-auto d-inline w-50">
         <div class="input-group">
@@ -12,7 +12,7 @@
 
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link text-success" href="#">example@gmail.com</a>
+            <a class="nav-link text-success" href="/">example@gmail.com</a>
         </li>
     </ul>
 </nav>
