--- a/twig/home.html
+++ b/twig/home.html
@@ -21,27 +21,27 @@
     <div class="row my-md-1">
         <div class="col-md-4">
             <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
-            <a href="/view/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+            <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
         <div class="col-md-4">
             <h2 class="lead text-limit">Video 2</h2>
-           <a href="/view/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+           <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
         <div class="col-md-4">
             <h2 class="lead text-limit">Video 3</h2>
-           <a href="/view/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+           <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
         <div class="col-md-4">
             <h2 class="lead text-limit">Video 4</h2>
-           <a href="/view/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+           <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
         <div class="col-md-4">
             <h2 class="lead text-limit">Video 5</h2>
-           <a href="/view/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+           <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
         <div class="col-md-4">
             <h2 class="lead text-limit">Video 6</h2>
-           <a href="/view/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+           <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
         </div>
     </div>
 
