Changes made to video template, gitignore, added some icons and changed the database

--- a/twig/video.html
+++ b/twig/video.html
@@ -5,9 +5,33 @@
 <!-- Main jumbotron -->
 <div class="jumbotron" id="jumbo">
     <div class="container">
+        <div class="col-12 ml-lg-0">
+            <h2 class="other-title">Title.mp4</h2>
+        </div>
+
+        <!-- VIDEO CONTAINER -->
         <video width="100%" height="100%" controls>
             <source src="/movies/test.MP4" type="video/mp4">
         </video>
+
+
+        <div class="row col-md-12">
+            <div class="row col-md-10">
+                <h2 class="other-title">Views:  </h2>
+                <h4>1337</h4>
+            </div>
+            <div class="col-md-1">
+                <button type="button" class="btn btn-success">
+                    <img src="/icon/arrow-up.png" aria-hidden="true">
+                </button>
+            </div>
+
+            <div class="col-md-1">
+                <button type="button" class="btn btn-danger">
+                    <img src="/icon/arrow-down.png" aria-hidden="true">
+                </button>
+            </div>
+        </div>
     </div>
 </div>
 
