--- a/twig/login.html
+++ b/twig/login.html
@@ -32,15 +32,13 @@
         </div>
 
         <div class="col-md-6 col-sm-12">
-            <form class="form-signin form-group">
+            <form action="/view/login/register.php" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Register</h2>
-                <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="email" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="registerPassword" class="form-control" placeholder="Password" required="">
+                <input type="email" name="email" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+                <input type="password" name="password" id="registerPassword" class="form-control" placeholder="Password" required="">
                 <div class="checkbox">
                     <label class="text-white">
-                        <input type="checkbox" value="remember-me" > I am a teacher
+                        <input type="checkbox" name="isTeacher" value="yes" > I am a teacher
                     </label>
                 </div>
                 <button class="btn btn-default bg-transparent btn-block border border-white text-white" type="submit">Register</button>
