User class rewritten, sessions now in use, new login/logout system aswell

--- a/twig/login.html
+++ b/twig/login.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-sm-12 form-line">
-            <form action="/php/login.php" method="post" class="form-signin form-group">
+            <form action="/view/home/index.php" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Sign in</h2>
 
                 <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
@@ -28,10 +28,10 @@
         </div>
 
         <div class="col-md-6 col-sm-12">
-            <form action="/php/register.php" method="post" class="form-signin form-group">
+            <form action="/view/home/index.php" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Register</h2>
-                <input type="email" name="email" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-                <input type="password" name="password" id="registerPassword" class="form-control" placeholder="Password" required="">
+                <input type="email" name="newemail" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+                <input type="password" name="newpassword" id="registerPassword" class="form-control" placeholder="Password" required="">
                 <div class="checkbox">
                     <label class="text-white">
                         <input type="checkbox" name="isTeacher" value="yes" > I am a teacher
