--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -12,7 +12,11 @@
 
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link text-success" href="/">example@gmail.com</a>
+            {% if loggedin=='yes' %}
+            <a class="nav-link text-success" href="/php/logout.php">{{ user['email'] }}</a>
+            {% else %}
+            <a class="nav-link text-success" href="/view/login">Login</a>
+            {% endif %}
         </li>
     </ul>
 </nav>
