added a home link on login page

--- a/twig/login.html
+++ b/twig/login.html
@@ -9,7 +9,7 @@
 
 
 <div class="text-center text-white">
-    <h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">#MeToobe</span></h1>
+    <a class="link-line-none" href="/"><h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">#MeToobe</span></h1></a>
 </div>
 
 
