small changes to links around :) (i used some wrongly)

--- a/twig/login.html
+++ b/twig/login.html
@@ -9,14 +9,14 @@
 
 
 <div class="text-center text-white">
-    <a class="link-line-none" href="/"><h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">#MeToobe</span></h1></a>
+    <h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"><a class="text-white link-line-none" href="/">#MeToobe</a></span></h1>
 </div>
 
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-sm-12 form-line">
-            <form action="/view/home/index.php" method="post" class="form-signin form-group">
+            <form action="/" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Sign in</h2>
 
                 <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="col-md-6 col-sm-12">
-            <form action="/view/home/index.php" method="post" class="form-signin form-group">
+            <form action="/" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Register</h2>
                 <input type="email" name="newemail" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
                 <input type="password" name="newpassword" id="registerPassword" class="form-control" placeholder="Password" required="">
