--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -13,9 +13,9 @@
     <ul class="nav nav-pills">
         <li class="nav-item">
             {% if loggedin=='yes' %}
-            <a class="nav-link text-success" href="/php/logout.php">{{ user['email'] }}</a>
+            <a class="nav-link text-success" href="/logout">{{ user['email'] }}</a>
             {% else %}
-            <a class="nav-link text-success" href="/view/login">Login</a>
+            <a class="nav-link text-success" href="/login">Login</a>
             {% endif %}
         </li>
     </ul>
