using twigloader.php to load twig boilerplate

--- a/twig/upload.html
+++ b/twig/upload.html
@@ -9,7 +9,7 @@
                 <div class="col-md-4">
                    <label for="fileuploader"><h4 class="other-title">Upload video</h4></label>
                     <div class="custom-file" id="fileuploader">
-                        <input type="file" class="custom-file-input" id="customFile" name="fileToUpload" accept="video/mp4,video/x-m4v,video/*" required>
+                        <input type="file" class="custom-file-input" id="customFile" name="fileToUpload" accept=".png|video/mp4|video/x-m4v|video/*" required>
                         <label class="custom-file-label" for="customFile">Choose video</label>
                     </div>
                 </div>
