--- a/twig/video.html
+++ b/twig/video.html
@@ -6,19 +6,19 @@
 <div class="jumbotron" id="jumbo">
     <div class="container">
         <div class="col-12 ml-lg-0">
-            <h2 class="other-title">Title.mp4</h2>
+            <h2 class="other-title">{{ videoData['name'] }}</h2>
         </div>
 
         <!-- VIDEO CONTAINER -->
-        <video width="100%" height="100%" controls>
-            <source src="/movies/test.MP4" type="video/mp4">
+        <video width="100%" height="100%" controls autoplay>
+            <source src="/uploadedFiles/{{ videoData['user'] }}/{{ videoData['videoid'] }}{% if videoData['mime']=='video/mp4' %}.mp4{% elseif videoData['mime']=='video/webm' %}.webm{% elseif videoData['mime']=='video/ogg' %}.ogg{% endif %}" type="{{ videoData['mime'] }}">
         </video>
 
 
         <div class="row col-md-12">
             <div class="row col-md-10">
-                <h2 class="other-title">Views:  </h2>
-                <h4>1337</h4>
+                <h2 class="other-title">Views: </h2>
+                <h4>{{ videoData['views'] }}</h4>
             </div>
             <div class="col-md-1">
                 <button type="button" class="btn btn-success">
