--- a/twig/_head.html
+++ b/twig/_head.html
@@ -9,6 +9,9 @@
 
     <title> MeToobe {% if title is not empty %} | {{ title }} {% endif %}</title>
 
+    <!-- FontAwesome icons -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="/vendor/twbs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
