--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
+
     <a class="navbar-brand text-success content-header-logo" href="/">#MeToobe</a>
+
 
     <form class="mx-2 my-auto d-inline w-50">
         <div class="input-group">
@@ -11,6 +13,9 @@
     </form>
 
     <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a href="/upload"><i class="my-3 fas fa-upload fa-lg" style="color: #28a745;"></i></a>
+        </li>
         <li class="nav-item">
             {% if loggedin=='yes' %}
             <a class="nav-link text-success" href="/logout">{{ user['email'] }}</a>
