Filename now included in the choose a file thingy

--- a/twig/_foot.html
+++ b/twig/_foot.html
@@ -6,4 +6,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="/vendor/twbs/bootstrap/dist/js/bootstrap.js"></script>
 
+    <script>
+        $("input[type=file]").change(function () {
+            var fieldVal = $(this).val();
+
+            // Change the node's value by removing the fake path (Chrome)
+            fieldVal = fieldVal.replace("C:\\fakepath\\", "");
+
+            if (fieldVal != undefined || fieldVal != "") {
+                $(this).next(".custom-file-label").attr('data-content', fieldVal);
+                $(this).next(".custom-file-label").text(fieldVal);
+            }
+
+        });
+    </script>
+
 </foot>
