--- a/twig/upload.html
+++ b/twig/upload.html
@@ -10,7 +10,9 @@
                    <label for="fileuploader"><h4 class="other-title">Upload video</h4></label>
                     <div class="custom-file" id="fileuploader">
                         <input type="file" class="custom-file-input" id="customFile" name="fileToUpload" accept="video/mp4,video/webm,video/oog" required>
-                        <label class="custom-file-label" for="customFile">Choose video</label>
+                        <label class="custom-file-label" for="customFile">
+                            <span class="file-custom" data-content-value="Choose Video..."></span>
+                        </label>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -24,3 +26,4 @@
 </div>
 
 {% endblock content %}
+
