--- a/twig/video.html
+++ b/twig/video.html
@@ -26,19 +26,36 @@
                 </div>
                 <div class="col-1"></div>
                 <div>
+                    {% if hasLiked==true %}
+                    <form action="/video?id={{ videoData['videoid'] }}" method="post">
+                        <button type="submit" name="nothing" value="nothing" class="btn btn-success btn-sm">
+                            <img src="/icon/arrow-up.png" aria-hidden="true">
+                        </button>
+                    </form>
+                    {% else %}
                     <form action="/video?id={{ videoData['videoid'] }}" method="POST">
+
                         <button type="submit" name="upvote" value="upvote" class="btn btn-success btn-sm">
                             <img src="/icon/arrow-up.png" aria-hidden="true">
                         </button>
                     </form>
+                    {% endif %}
                 </div>
 
                 <div>
+                    {% if hasLiked==true %}
+                    <form action="/video?id={{ videoData['videoid'] }}" method="POST">
+                        <button type="submit" name="nothing" value="nothing" class="button btn btn-danger btn-sm">
+                            <img src="/icon/arrow-down.png" aria-hidden="true">
+                        </button>
+                    </form>
+                    {% else %}
                     <form action="/video?id={{ videoData['videoid'] }}" method="POST">
                         <button type="submit" name="downvote" value="downvote" class="button btn btn-danger btn-sm">
                             <img src="/icon/arrow-down.png" aria-hidden="true">
                         </button>
                     </form>
+                    {% endif %}
                 </div>
                 <div class="col-1"></div>
                 <div>
