small bugfix for guests, also removed comment box for guests.

--- a/twig/video.html
+++ b/twig/video.html
@@ -79,15 +79,15 @@
             <div class="col-12 ml-lg-0">
                 <h1 class="display-4">Comments</h1>
             </div>
-
+            {% if loggedin=='yes' %}
             <form class="comment-submit" action="/php/postComment.php?videoid={{ videoData['videoid'] }}" method="post">
                 <div class="form-group">
-                  <label for="comment">Comment:</label>
+                  <label for="textarea-comment">Comment:</label>
                   <textarea class="form-control" rows="5" id="textarea-comment" name="comment"></textarea>
                 </div>
                 <button type="submit" class="btn btn-success">Submit</button>
             </form>
-
+            {% endif %}
             <br>
             <br>
 
@@ -104,7 +104,7 @@
                 <div class="comment">
                     <p class="comment-name">{{ user.email }}</p>
                     <p class="comment-text">{{ commentdata.comment }}</p>
-                    <p class="comment-time">{{ commentdata.time }}</p>
+                    <p class="comment-time" style="font-size: 10px; color: grey;">{{ commentdata.time }}</p>
                 </div>
                 {% endfor %}
             {% endif %}
