--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -18,7 +18,10 @@
         </li>
         <li class="nav-item">
             {% if loggedin=='yes' %}
-            <a class="nav-link text-success" href="/logout">{{ user['email'] }}</a>
+            <a class="nav-link text-success" href="/">{{ user['fullname'] }}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-success" href="/logout">Logout</a>
             {% else %}
             <a class="nav-link text-success" href="/login">Login</a>
             {% endif %}
