--- a/twig/login.html
+++ b/twig/login.html
@@ -30,7 +30,8 @@
         <div class="col-md-6 col-sm-12">
             <form action="/" method="post" class="form-signin form-group">
                 <h2 class="form-signin-heading text-white">Register</h2>
-                <input type="email" name="newemail" id="registerEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+                <input type="text" name="newname" id="registerUsername" class="form-control" placeholder="Full name" required="" autofocus=""><br>
+                <input type="email" name="newemail" id="registerEmail" class="form-control" placeholder="Email address" required="">
                 <input type="password" name="newpassword" id="registerPassword" class="form-control" placeholder="Password" required="">
                 <div class="checkbox">
                     <label class="text-white">
