--- a/twig/video.html
+++ b/twig/video.html
@@ -11,7 +11,7 @@
 
         <!-- VIDEO CONTAINER -->
         <video width="100%" height="100%" controls autoplay>
-            <source src="/uploadedFiles/{{ videoData['user'] }}/{{ videoData['videoid'] }}{% if videoData['mime']=='video/mp4' %}.mp4{% elseif videoData['mime']=='video/webm' %}.webm{% elseif videoData['mime']=='video/ogg' %}.ogg{% endif %}" type="{{ videoData['mime'] }}">
+            <source src="/uploadedFiles/{{ videoData['userid'] }}/{{ videoData['id'] }}{% if videoData['mime']=='video/mp4' %}.mp4{% elseif videoData['mime']=='video/webm' %}.webm{% elseif videoData['mime']=='video/ogg' %}.ogg{% endif %}" type="{{ videoData['mime'] }}">
         </video>
 
 
@@ -27,13 +27,13 @@
                 <div class="col-1"></div>
                 <div>
                     {% if hasLiked==true %}
-                    <form action="/video?id={{ videoData['videoid'] }}" method="post">
+                    <form action="/video?id={{ videoData['id'] }}" method="post">
                         <button type="submit" name="nothing" value="nothing" class="btn btn-success btn-sm">
                             <img src="/icon/arrow-up.png" aria-hidden="true">
                         </button>
                     </form>
                     {% else %}
-                    <form action="/video?id={{ videoData['videoid'] }}" method="POST">
+                    <form action="/video?id={{ videoData['id'] }}" method="POST">
 
                         <button type="submit" name="upvote" value="upvote" class="btn btn-success btn-sm">
                             <img src="/icon/arrow-up.png" aria-hidden="true">
@@ -44,13 +44,13 @@
 
                 <div>
                     {% if hasLiked==true %}
-                    <form action="/video?id={{ videoData['videoid'] }}" method="POST">
+                    <form action="/video?id={{ videoData['id'] }}" method="POST">
                         <button type="submit" name="nothing" value="nothing" class="button btn btn-danger btn-sm">
                             <img src="/icon/arrow-down.png" aria-hidden="true">
                         </button>
                     </form>
                     {% else %}
-                    <form action="/video?id={{ videoData['videoid'] }}" method="POST">
+                    <form action="/video?id={{ videoData['id'] }}" method="POST">
                         <button type="submit" name="downvote" value="downvote" class="button btn btn-danger btn-sm">
                             <img src="/icon/arrow-down.png" aria-hidden="true">
                         </button>
@@ -80,7 +80,7 @@
                 <h1 class="display-4">Comments</h1>
             </div>
             {% if loggedin=='yes' %}
-            <form class="comment-submit" action="/php/postComment.php?videoid={{ videoData['videoid'] }}" method="post">
+            <form class="comment-submit" action="/php/postComment.php?videoid={{ videoData['id'] }}" method="post">
                 <div class="form-group">
                   <label for="textarea-comment">Comment:</label>
                   <textarea class="form-control" rows="5" id="textarea-comment" name="comment"></textarea>
