--- a/twig/user.html
+++ b/twig/user.html
@@ -27,15 +27,17 @@
                 <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
                 <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
+            <br>
             <div class="col-md-8">
                 <h2 class="lead text-limit">Video 2</h2>
                 <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
+            <br>
             <div class="col-md-8">
                 <h2 class="lead text-limit">Video 3</h2>
                 <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
-        
+
 
 
         </div>
@@ -48,15 +50,17 @@
 
             <div class="col-md-8">
                 <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
-                <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
             </div>
+            <br>
             <div class="col-md-8">
                 <h2 class="lead text-limit">Video 2</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
             </div>
+            <br>
             <div class="col-md-8">
                 <h2 class="lead text-limit">Video 3</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
             </div>
 
 
