search function now works, also search.html, search/index.php, _nav.html added/edited. Also changed user.php class file to User.php

--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -3,9 +3,9 @@
     <a class="navbar-brand text-success content-header-logo" href="/">#MeToobe</a>
 
 
-    <form class="mx-2 my-auto d-inline w-50">
+    <form action="/search" method="get" class="mx-2 my-auto d-inline w-50">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="imt2631..">
+            <input type="text" name="query" class="form-control" placeholder="imt2631..">
             <span class="input-group-btn">
                 <button class="btn btn-outline-success ml-lg-1" type="button">GO</button>
             </span>
