--- a/twig/search.html
+++ b/twig/search.html
@@ -1,22 +1,24 @@
 {% extends "_base.html" %}
 {% block title %} User {% endblock %}
 {% block content %}
+<div class="container-fluid border-top"><br></div>
 
 <div class="container">
 
-    {% if searchResults=='no' %}
-    <div class="col-md-4">
-        <h2 class="other-title">No videos available.</h2>
+    <div class="row">
+        {% if searchResults=='no' %}
+        <div class="col-md-4">
+            <h2 class="other-title">No videos found.</h2>
+        </div>
+        {% else %}
+        {% for video in searchResults %}
+        <div class="col-md-4">
+            <h2 class="lead text-limit">{{ video['name'] }}</h2>
+            <a href="/video?id={{ video['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
-    {% else %}
-    {% for video in searchResults %}
-    <div class="col-md-4">
-        <h2 class="lead text-limit">{{ video['name'] }}</h2>
-        <a href="/video?id={{ video['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
-    </div>
-    {% endfor %}
-    {% endif %}
-
 </div>
 
 {% endblock content %}
