--- a/twig/user.html
+++ b/twig/user.html
@@ -9,9 +9,13 @@
             <div style="margin-top: 10px;"></div>
 
             <h2 class="other-title text-dark text-center">Account</h2>
-            <p>Johan Aanesen</p>
-            <p>johan.aanesen@gmail.com</p>
+            <h2 class="text-center">{{ userStats['fullname']|capitalize }}</h2>
+            <p class="text-center">{{ userStats['email'] }}</p>
+            <h5 class="">Stats:</h5>
             <p>Views: 1500000000</p>
+            <p>Likes: 152512</p>
+            <p>Dislikes: 2.5</p>
+            <p>Comments: 1512</p>
 
 
 
@@ -23,20 +27,20 @@
 
             <h2 class="other-title text-success text-center">Videos</h2>
 
+
+            {% if userVideos=='no' %}
+            <div class="col-md-4">
+                <p>No videos found.</p>
+            </div>
+            {% else %}
+            {% for video in userVideos %}
             <div class="col-md-8">
-                <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
-                <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
+                <h2 class="lead text-limit">{{ video['name'] }}</h2>
+                <a href="/video?id={{ video['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
             <br>
-            <div class="col-md-8">
-                <h2 class="lead text-limit">Video 2</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
-            </div>
-            <br>
-            <div class="col-md-8">
-                <h2 class="lead text-limit">Video 3</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
-            </div>
+            {% endfor %}
+            {% endif %}
 
 
 
@@ -48,20 +52,19 @@
 
             <h2 class="other-title text-info text-center">Playlists</h2>
 
+            {% if userPlaylists=='no' %}
+            <div class="col-md-4">
+                <p>No playlists found.</p>
+            </div>
+            {% else %}
+            {% for playlist in userPlaylists %}
             <div class="col-md-8">
-                <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
-                <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
+                <h2 class="lead text-limit">{{ playlist['title'] }}</h2>
+                <a href="/playlist?id={{ playlist['id'] }}"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
             </div>
             <br>
-            <div class="col-md-8">
-                <h2 class="lead text-limit">Video 2</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
-            </div>
-            <br>
-            <div class="col-md-8">
-                <h2 class="lead text-limit">Video 3</h2>
-                <a href="/video"> <img src="/thumbnail/test.jpg" class="img-thumbnail border-info"></a>
-            </div>
+            {% endfor %}
+            {% endif %}
 
 
 
@@ -75,7 +78,7 @@
                     <input type="checkbox" name="isTeacher" value="yes" required > I am sure, I want to delete my account.
                 </label>
             </div>
-            <button type="submit" class="btn btn-danger btn-lg btn-block">DELETE</button>
+            <button type="submit" class="btn btn-danger btn-lg btn-block" disabled>DELETE</button>
         </form>
     </div>
 
