--- a/twig/upload.html
+++ b/twig/upload.html
@@ -7,7 +7,7 @@
         <form action="/php/upload.php" method="post" enctype="multipart/form-data">
             <div class="row col-md-12">
                 <div class="col-md-4">
-                   <label for="fileuploader"><h4 class="other-title">Upload video</h4></label>
+                   <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Video</span></h4></label>
                     <div class="custom-file" id="fileuploader">
                         <input type="file" class="custom-file-input" id="customFile" name="fileToUpload" accept="video/mp4,video/webm,video/oog" required>
                         <label class="custom-file-label" for="customFile">
@@ -16,6 +16,14 @@
                     </div>
                 </div>
                 <div class="col-md-8">
+                    <div class="row">
+                        <div class="col">
+                            <label for="videocourse"><h4 class="other-title">Course</h4></label><input class="form-control" type="text" name="videocourse" id="videocourse"><br>
+                        </div>
+                        <div class="col">
+                            <label for="videotopic"><h4 class="other-title">Topic</h4></label><input class="form-control" type="text" name="videotopic" id="videotopic"><br>
+                        </div>
+                    </div>
                     <label for="videotitle"><h4 class="other-title">Title</h4></label><input class="form-control" type="text" name="videotitle" id="videotitle" required><br>
                     <label for="descr"><h4 class="other-title">Description</h4></label><textarea class="form-control" id="descr" name="descr" rows="3"></textarea><br>
                     <button type="submit" value="Lagre filen i databasen" class="btn btn-success">Submit</button>
