--- a/twig/video.html
+++ b/twig/video.html
@@ -10,7 +10,7 @@
         </div>
 
         <!-- VIDEO CONTAINER -->
-        <video width="100%" height="100%" controls autoplay>
+        <video width="100%" height="100%" controls>
             <source src="/uploadedFiles/{{ videoData['userid'] }}/{{ videoData['id'] }}{% if videoData['mime']=='video/mp4' %}.mp4{% elseif videoData['mime']=='video/webm' %}.webm{% elseif videoData['mime']=='video/ogg' %}.ogg{% endif %}" type="{{ videoData['mime'] }}">
         </video>
 
