twig html files - Changed variable names. Using less variables, because we check if something is empty, instead of having a separate which is true or false. - Created error.html page, to redirect if there is an error.

--- a/twig/_nav.html
+++ b/twig/_nav.html
@@ -17,13 +17,14 @@
             <a href="/upload"><i class="my-3 fas fa-upload fa-lg" style="color: #28a745;"></i></a>
         </li>
         <li class="nav-item">
-            {% if loggedin=='yes' %}
+            {% if not userid %}
+            <a class="nav-link text-success" href="/login">Login</a>
+            
+            {% else %}            
             <a class="nav-link text-success" href="/">{{ user['fullname'] }}</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-success" href="/logout">Logout</a>
-            {% else %}
-            <a class="nav-link text-success" href="/login">Login</a>
             {% endif %}
         </li>
     </ul>
