--- a/twig/error.html
+++ b/twig/error.html
@@ -9,5 +9,7 @@
 <body>
   <h1>Error {{ code }}</h1>
   <h2>{{msg}}</h2>
+
+  <a href="/login"> <--- Back to login </a> | <a href="/home">Go home --></a>
 </body>
 </html>
